add aspect logging

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,6 +1,14 @@
 <html>
 <body>
-    <a href="http://localhost:8080/rest/admin/users">http://localhost:8080/rest/admin/users</a><br>
+<h2>Rest</h2>
+<a target="_blank"href="http://localhost:8080/rest/admin/users">http://localhost:8080/rest/admin/users</a><br>
+<a target="_blank" href="http://localhost:8080/rest/admin/users?page=0&size=3&sort=id,asc">http://localhost:8080/rest/admin/users?page=0&size=3&sort=id,asc</a><br>
+<a target="_blank"href="http://localhost:8080/rest/admin/users/list">http://localhost:8080/rest/admin/users/list</a><br>
+
+<br>
+<br>
+<br>
+    <h2>Web</h2>
     <a href="http://localhost:8080/admin/users">http://localhost:8080/admin/users</a><br>
 
 </body>
