--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,15 +1,16 @@
 <html>
 <body>
 <h2>Rest</h2>
-<a target="_blank"href="http://localhost:8080/rest/admin/users">http://localhost:8080/rest/admin/users</a><br>
+<a target="_blank" href="http://localhost:8080/rest/admin/users">http://localhost:8080/rest/admin/users</a><br>
 <a target="_blank" href="http://localhost:8080/rest/admin/users?page=0&size=3&sort=id,asc">http://localhost:8080/rest/admin/users?page=0&size=3&sort=id,asc</a><br>
-<a target="_blank"href="http://localhost:8080/rest/admin/users/list">http://localhost:8080/rest/admin/users/list</a><br>
+<a target="_blank" href="http://localhost:8080/rest/admin/users/list">http://localhost:8080/rest/admin/users/list</a><br>
 
 <br>
 <br>
 <br>
     <h2>Web</h2>
-    <a href="http://localhost:8080/admin/users">http://localhost:8080/admin/users</a><br>
+    <a target="_blank" href="http://localhost:8080/admin/users">http://localhost:8080/admin/users</a><br>
+    <a target="_blank" href="http://localhost:8080/admin/users?page=0&size=3&sort=id,asc">http://localhost:8080/admin/users?page=0&size=3&sort=id,asc</a><br>
 
 </body>
 </html>
