add getUserByEmail with tests

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,6 +30,9 @@ FOUND)<br>
 <h3>getUser</h3>
 <a target="_blank" href="http://localhost:8080/admin/users/100000">http://localhost:8080/admin/users/100000</a><br>
 <a target="_blank" href="http://localhost:8080/admin/users/123">http://localhost:8080/admin/users/123</a>(NOT FOUND)<br>
+<a target="_blank" href="http://localhost:8080/admin/users/by-email?email=vasya@gmail.com">http://localhost:8080/admin/users/by-email?email=vasya@gmail.com</a><br>
+<a target="_blank" href="http://localhost:8080/admin/users/by-email?email=notfound@gmail.com">http://localhost:8080/admin/users/by-email?email=notfound@gmail.com</a>(NOT FOUND)<br>
+<a target="_blank" href="http://localhost:8080/admin/users/by-email?email=bademailgmail.com">http://localhost:8080/admin/users/by-email?email=bademailgmail.com</a>(BAD EMAIL)<br>
 
 </body>
 </html>
