--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,16 +1,38 @@
 <html>
 <body>
 <h2>Rest</h2>
+<br>
+<h3>getUsers</h3>
 <a target="_blank" href="http://localhost:8080/rest/admin/users">http://localhost:8080/rest/admin/users</a><br>
 <a target="_blank" href="http://localhost:8080/rest/admin/users?page=0&size=3&sort=id,asc">http://localhost:8080/rest/admin/users?page=0&size=3&sort=id,asc</a><br>
-<a target="_blank" href="http://localhost:8080/rest/admin/users/list">http://localhost:8080/rest/admin/users/list</a><br>
+<a target="_blank"
+   href="http://localhost:8080/rest/admin/users/list">http://localhost:8080/rest/admin/users/list</a><br>
+
+<br>
+<h3>getUser</h3>
+<a target="_blank"
+   href="http://localhost:8080/rest/admin/users/100000">http://localhost:8080/rest/admin/users/100000</a><br>
+<a target="_blank" href="http://localhost:8080/rest/admin/users/123">http://localhost:8080/rest/admin/users/123</a> (NOT
+FOUND)<br>
+<a target="_blank" href="http://localhost:8080/rest/admin/users/by-email/?email=vasya@gmail.com">http://localhost:8080/rest/admin/users/by-email/?email=vasya@gmail.com</a><br>
+<a target="_blank" href="http://localhost:8080/rest/admin/users/by-email/?email=vasyagmailcom">http://localhost:8080/rest/admin/users/by-email/?email=vasyagmailcom</a><br>
 
 <br>
 <br>
 <br>
-    <h2>Web</h2>
-    <a target="_blank" href="http://localhost:8080/admin/users">http://localhost:8080/admin/users</a><br>
-    <a target="_blank" href="http://localhost:8080/admin/users?page=0&size=3&sort=id,asc">http://localhost:8080/admin/users?page=0&size=3&sort=id,asc</a><br>
+<h2>Web</h2>
+<h3>getUsers</h3>
+<a target="_blank" href="http://localhost:8080/admin/users">http://localhost:8080/admin/users</a><br>
+<a target="_blank" href="http://localhost:8080/admin/users?page=0&size=3&sort=id,asc">http://localhost:8080/admin/users?page=0&size=3&sort=id,asc</a><br>
+<br>
+<br>
+<br>
+<h3>getUser</h3>
+<a target="_blank" href="http://localhost:8080/admin/users/100000">http://localhost:8080/admin/users/100000</a><br>
+<a target="_blank" href="http://localhost:8080/admin/users/123">http://localhost:8080/admin/users/123</a>(NOT FOUND)<br>
+<a target="_blank" href="http://localhost:8080/admin/users/by-email?email=vasya@gmail.com">http://localhost:8080/admin/users/by-email?email=vasya@gmail.com</a><br>
+<a target="_blank" href="http://localhost:8080/admin/users/by-email?email=notfound@gmail.com">http://localhost:8080/admin/users/by-email?email=notfound@gmail.com</a>(NOT FOUND)<br>
+<a target="_blank" href="http://localhost:8080/admin/users/by-email?email=bademailgmail.com">http://localhost:8080/admin/users/by-email?email=bademailgmail.com</a>(BAD EMAIL)<br>
 
 </body>
 </html>
