--- a/src/main/resources/static/index2.html
+++ b/src/main/resources/static/index2.html
@@ -4,5 +4,14 @@
 </head>
 <body>
 <button class="myButton-purple myButton ">button</button>
+
+
+<form method="post">
+    <input type="text" name="firstName">
+    <input type="submit" value="submit">
+</form>
+
+
+
 </body>
 </html>
