--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -100,6 +100,14 @@ curl -s -i -X DELETE http://localhost:8080/rest/admin/users/by-email?email=badgm
 
 <h3>Register</h3>
 <a target="_blank" href="http://localhost:8080/admin/users/register">http://localhost:8080/admin/users/register</a><br>
+<br>
+<br>
+<br>
+<br>
+
+
+<h3>Delete User  GET</h3>
+<a target="_blank" href="http://localhost:8080/admin/users/delete/100000">http://localhost:8080/admin/users/delete/100000</a><br>
 
 </body>
 </html>
