refactoring sort fields

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -141,6 +141,18 @@ curl -s -i -X PUT -d '{"firstName":"", "lastName":"updated lastName", "birthDay"
 
 <h3>Delete User  GET</h3>
 <a target="_blank" href="http://localhost:8080/admin/users/delete/100000">http://localhost:8080/admin/users/delete/100000</a><br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p>=========================================================</p>
+<h1>Rest POSTS</h1><br>
+<a target="_blank" href="http://localhost:8080/rest/admin/posts">http://localhost:8080/rest/admin/posts</a><br>
+
+
+
 
 </body>
 </html>
