refactoring controller classes structure

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -149,7 +149,7 @@ curl -s -i -X PUT -d '{"firstName":"", "lastName":"updated lastName", "birthDay"
 <br>
 <p>=========================================================</p>
 <h1>Rest POSTS</h1><br>
-<a target="_blank" href="http://localhost:8080/rest/admin/posts">http://localhost:8080/rest/admin/posts</a><br>
+<a target="_blank" href="http://localhost:8080/rest/posts">http://localhost:8080/rest/admin/posts</a><br>
 
 
 
